WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205824
NetworkSessionCocoa::isolatedSession should not use iterator after mutating m_isolatedSessions
https://bugs.webkit.org/show_bug.cgi?id=205824
Summary
NetworkSessionCocoa::isolatedSession should not use iterator after mutating m...
Alex Christensen
Reported
2020-01-06 12:34:11 PST
NetworkSessionCocoa::isolatedSession should not use iterator after mutating m_isolatedSessions
Attachments
Patch
(3.12 KB, patch)
2020-01-06 12:40 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-01-06 12:40:55 PST
Created
attachment 386876
[details]
Patch
Alex Christensen
Comment 2
2020-01-06 12:40:58 PST
<
rdar://problem/55107625
>
WebKit Commit Bot
Comment 3
2020-01-06 15:32:37 PST
Comment on
attachment 386876
[details]
Patch Clearing flags on attachment: 386876 Committed
r254092
: <
https://trac.webkit.org/changeset/254092
>
WebKit Commit Bot
Comment 4
2020-01-06 15:32:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug