NetworkSessionCocoa::isolatedSession should not use iterator after mutating m_isolatedSessions https://bugs.webkit.org/show_bug.cgi?id=205824 <rdar://problem/55107625>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-01-06
Reviewed by Chris Dumez.

Classic iterator use after mutating iterated container was causing crashes by returning a null SessionWrapper&
This was introduced in r252185 or r248640.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::isolatedSession):

Canonical link: https://commits.webkit.org/218961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254092 268f45cc-cd09-0410-ab3c-d52691b4dbfc